i18n fixed & added heroku's procfile

--- a/static/locales/pt/common.json
+++ b/static/locales/pt/common.json
@@ -1,4 +1,5 @@
 {
-  "hello": "e ae tche",
-  "morning": "manha"
+  "Skills": "Habilidades",
+  "Description": "Descrição",
+  "Interests": "Interesses"
 }
