--- a/static/locales/en/common.json
+++ b/static/locales/en/common.json
@@ -1,4 +1,5 @@
 {
-  "hello": "Hello",
-  "morning": "Morning"
+  "Skills": "Skills",
+  "Description": "Description",
+  "Interests": "Interests"
 }
